# seye_rs

./: .gitignore  Cargo.toml  README.md
src/: diff.rs  main.rs  report.rs  save.rs  scan.rs  utility.rs  walk.rs
src/diff/: mod.rs
src/find/: mod.rs
src/report/: mod.rs
src/save/: mod.rs
src/scan/: mod.rs
src/utility/: mod.rs
src/walk/: mod.rs
tests/test_dir/a/new_dir/: new_file
