[package]
name = "seye_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
queues = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
memory-stats = { version = "1.2.0", features = ["always_use_statm"] }
libc = "0.2"
rayon = "1.10.0"
memmem = "0.1.1"
memchr = "2.7.4"
regex = "1.11.1"
